# coding_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  create_pr_manual.py  demo.py  generate_abc_report.py  generate_eval_report.py  pyproject.toml  run_abc_evaluation.py
evaluation_results/: abc_enhanced_report_143819.html  abc_eval_20250720_143819.html  abc_eval_20250720_143819.json  abc_evaluation_comparison_20250720_143819.json  abc_evaluation_comparison_20250720_143819.summary.txt  quick_eval_20250718_204955.html  quick_eval_20250718_204955.json  quick_eval_20250718_211036.html  quick_eval_20250718_211036.json
src/agent/: code_analyzer.py  code_modifier.py  coding_agent.py
src/api/: main.py  models.py
src/evaluation/: README.md  __init__.py  abc_compliant_framework.py  backspace_eval_suite.py  backspace_test_runner.py  enhanced_evaluators.py  environment_validator.py  eval_framework.py  eval_runner.py  pr_validator.py  regression_detection.py  shortcut_detector.py  task_validator.py  tiered_datasets.py
src/sandbox/: __init__.py  e2b_sandbox.py
src/utils/: config.py
tests/: __init__.py  conftest.py  test_api_e2e.py
